# JA-PWP-Project-1

./: Camera.py  DummyLight.py  DummyRobot.py  Forward.py  GUI.java  Host.py  Light.py  Lights.py  Maze.py  Motor.py  Robot.py  index.html  main.py  pyproject.toml  settings.json
Move/: Turn.py
Not Used/: DummyLight.py  Light.py  Links
notUsed/: DummyRobot.py  GUI.java  rangeSlider.html
static/: index.css  index.js  script.js  style.css  tuning.css  tuning.js
templates/: index.html  saveButton.html  tuning.html
