[tool.poetry]
name = "ja-pwp-project-1"
version = "0.1.0"
description = ""
authors = ["BrianLee27 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
Flask = "^2.1.2"
opencv-python = "^4.5.5"
rpi-ws281x = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
